<resources>
    <string name="app_name">Numerical Integration</string>
    <string name="hello_world">Hello World</string>
    <string name="action_settings">Settings</string>
    <string name="main_text">Enter Equation Here</string>
    <string name="a">A:</string>
    <string name="b">B:</string>
    <string name="simpson">simpson</string>
    <string name="romberg">romberg</string>
    <string name="i">i:</string>
    <string name="trapezoidal">Trapezoidal</string>
    <string name="trapezoidal_description"></string>

</resources>